--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<button id="btn">Clear all</button>
+
 <script src="./app.js"></script>
 </body>
 </html>
