--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./main.css">
-</head>
+
+<!--      Ustoz sortni ishlata olmadim qayeridadir xato qilgan bo'lsam kerak -->
+</head> 
 <body>
 <div class="box">
     <div class="line-btn">
         <button id="add-btn" class="">Added Todo</button>
         <button id="remove-btn">Remove Todo</button>
         <button id="refresh-btn">Refresh Todo</button>
-        <button id="sort-btn">Sorted Todo</button>
+<!--         <button id="sort-btn">Sorted Todo</button> -->
     </div>
     <div id="result"></div>
 </div>
