--- a/index.html
+++ b/index.html
@@ -2,35 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <title>Title</title>
 </head>
 <body>
-<h1>Student Ma'lumotlar</h1>
-<form id="studentForm">
-    <label for="name">Ism:</label>
-    <input type="text" id="name" required>
-    <label for="age">Yosh:</label>
-    <input type="number" id="age" required>
-    <label for="major">Mutaxassislik:</label>
-    <input type="text" id="major" required>
-    <button type="submit">Qo'shish</button>
-</form>
-<table id="studentTable">
-    <thead>
-    <tr>
-        <th>Ism</th>
-        <th>Yosh</th>
-        <th>Mutaxassislik</th>
-        <th>Amal</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- Ma'lumotlar bu yerda ko'rsatiladi -->
-    </tbody>
-</table>
-
-
-<script src="./app.js"></script>
+<div class="area"></div>
+<nav class="main-menu">
+    <ul>
+        <li>
+            <a href="https://jbfarrow.com">
+                <i class="fa fa-home fa-2x"></i>
+                <span class="nav-text">Community Dashboard</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-globe fa-2x"></i>
+                <span class="nav-text">Global Surveyors</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-comments fa-2x"></i>
+                <span class="nav-text">Group Hub Forums</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-camera-retro fa-2x"></i>
+                <span class="nav-text">Survey Photos</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-film fa-2x"></i>
+                <span class="nav-text">Surveying Tutorials</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-book fa-2x"></i>
+                <span class="nav-text">Surveying Jobs</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-cogs fa-2x"></i>
+                <span class="nav-text">Tools & Resources</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-map-marker fa-2x"></i>
+                <span class="nav-text">Member Map</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa fa-info fa-2x"></i>
+                <span class="nav-text">Documentation</span>
+            </a>
+        </li>
+    </ul>
+</nav>
 </body>
 </html>
