--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav class="main-menu">
     <ul>
         <li>
-            <a href="https://jbfarrow.com">
+            <a href="#">
                 <i class="fa fa-home fa-2x"></i>
                 <span class="nav-text">Community Dashboard</span>
             </a>
