--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Title</title>
 </head>
 <body>
+<div class="box">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>T/r</th>
+            <th>Name</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Website</th>
+            <th>Company</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody id="table" class="border"></tbody>
+    </table>
+</div>
 
-
+<script src="./app.js"></script>
 </body>
 </html>
