--- a/index.html
+++ b/index.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidebar</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="./main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
+    <title>Homework</title>
 </head>
 <body>
-<main>
-  <div class="sidebar-box">
-    <ul class="sidebar-menu">
-      <li class="menu-item">
-        <i class="bi bi-grid"></i>
-        <span>Dashboard</span>
-      </li>
-      <li class="menu-item">
-        <i class="bi bi-person"></i>
-        <span>Users</span>
-      </li>
-      <li class="menu-item">
-        <i class="bi bi-book"></i>
-        <span>Book</span>
-      </li>
-      <li class="menu-item">
-        <i class="bi bi-bug"></i>
-        <span>Bug</span>
-      </li>
-    </ul>
-  </div>
-  <div class="box-btn">
-    <button class="btn-icon">
-      <i class="bi bi-list"></i>
-      <i class="bi bi-x-circle"></i>
-    </button>
-  </div>
-</main>
+<h3 class="title">Alarm</h3>
+<form class="form">
+    <input class="input-time" id="time" type="time" required>
+    <input class="submit" type="submit" value="Set alarm">
+</form>
+<div id="res"></div>
 <script src="./app.js"></script>
 </body>
 </html>
