--- a/index.html
+++ b/index.html
@@ -7,12 +7,61 @@
     <title>Homework</title>
 </head>
 <body>
-<h3 class="title">Alarm</h3>
-<form class="form">
-    <input class="input-time" id="time" type="time" required>
-    <input class="submit" type="submit" value="Set alarm">
-</form>
-<div id="res"></div>
+<div class="box">
+    <h3>Currency Exchange</h3>
+    <form class="form">
+        <label class="label" for="currency">Enter Amount</label>
+        <input name="currency" id="currency" type="text" required>
+        <div class="selects">
+            <select name="from" id="from">
+                <option value="" selected disabled>USD</option>
+                <option value="USD">USD</option>
+                <option value="RUB">RUB</option>
+                <option value="UZS">UZS</option>
+                <option value="EUR">EUR</option>
+            </select>
+            <select name="to" id="to">
+                <option value="" selected disabled>USD</option>
+                <option value="UZS">UZS</option>
+                <option value="RUB">RUB</option>
+                <option value="USD">USD</option>
+                <option value="EUR">EUR</option>
+            </select>
+        </div>
+        <input class="btn" type="submit" value="Get Exchange">
+    </form>
+
+    <div id="res">
+
+    </div>
+</div>
+<div class="box">
+    <h3>Currency Exchange</h3>
+    <form class="form">
+        <select name="" id="change-currency">
+            <option value="" selected disabled>Select Currency</option>
+            <option value="UZS">UZS</option>
+            <option value="RUB">RUB</option>
+            <option value="USD">USD</option>
+            <option value="EUR">EUR</option>
+        </select>
+
+        <label class="label" for="">Enter Amount</label>
+        <input name="" id="" type="text" required>
+        <label class="label" for="">Enter Amount</label>
+        <input name="" id="" type="text" required>
+        <label class="label" for="">Enter Amount</label>
+        <input name="" id="" type="text" required>
+
+        <input class="btn" type="submit" value="Get Exchange">
+    </form>
+
+    <div id="result">
+
+    </div>
+</div>
+
+
 <script src="./app.js"></script>
 </body>
 </html>
