--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
 <div class="box">
     <h3>Currency Exchange</h3>
-    <form class="form">
+    <form id="form" class="form">
         <label class="label" for="currency">Enter Amount</label>
-        <input name="currency" id="currency" type="text" required>
+        <input name="currency" id="currency" type="number" required>
         <div class="selects">
             <select name="from" id="from">
-                <option value="" selected disabled>USD</option>
+                <option value="" selected disabled>Select Currency</option>
                 <option value="USD">USD</option>
                 <option value="RUB">RUB</option>
                 <option value="UZS">UZS</option>
                 <option value="EUR">EUR</option>
             </select>
             <select name="to" id="to">
-                <option value="" selected disabled>USD</option>
+                <option value="" selected disabled>Select Currency</option>
                 <option value="UZS">UZS</option>
                 <option value="RUB">RUB</option>
                 <option value="USD">USD</option>
@@ -30,35 +30,25 @@
         </div>
         <input class="btn" type="submit" value="Get Exchange">
     </form>
-
-    <div id="res">
-
-    </div>
+    <div id="res"></div>
 </div>
 <div class="box">
-    <h3>Currency Exchange</h3>
-    <form class="form">
-        <select name="" id="change-currency">
+    <h3>Change currency amount</h3>
+    <form id="change-currency" class="form">
+        <select id="select-currency">
             <option value="" selected disabled>Select Currency</option>
             <option value="UZS">UZS</option>
             <option value="RUB">RUB</option>
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
         </select>
-
-        <label class="label" for="">Enter Amount</label>
-        <input name="" id="" type="text" required>
-        <label class="label" for="">Enter Amount</label>
-        <input name="" id="" type="text" required>
-        <label class="label" for="">Enter Amount</label>
-        <input name="" id="" type="text" required>
-
-        <input class="btn" type="submit" value="Get Exchange">
+        <input step="any" id="uzs" type="number" required placeholder="Enter Amount">
+        <input step="any" id="rub" type="number" required placeholder="Enter Amount">
+        <input step="any" id="usd" type="number" required placeholder="Enter Amount">
+        <input step="any" id="eur" type="number" required placeholder="Enter Amount">
+        <input class="btn" type="submit" value="Change Currency">
     </form>
-
-    <div id="result">
-
-    </div>
+    <div id="result"></div>
 </div>
 
 
