--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
     </style>
 </head>
 <body>
-<button><a href="./src/index.html">Click Me</a></button>
+<button><a href="src/main.html">Click Me</a></button>
 </body>
 </html>
