--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,39 @@
     <title>Homework</title>
 </head>
 <body>
-<div class="w-full h-screen flex items-center">
+<div class="flex items-center box flex-col">
     <div class="max-w-[1000px] w-full flex flex-col items-center mx-auto px-[40px]">
-        <video id="video" class="min-w-[500px] max-h-[400px] rounded-2xl" src=""></video>
+        <video id="video" class="max-w-[500px] max-h-[400px] rounded-2xl" src=""></video>
         <div class="text-center py-[20px]">
             <h2 id="video-title" class="text-white text-[35px] font-extra bold tracking-[2px]">Drive BMW</h2>
-            <p id="video-company" class="text-gray-300">BMW</p>
+            <p id="company-name" class="text-gray-300">BMW</p>
         </div>
         <div class="w-full my-[10px]">
-            <div class="flex items-center justify-center gap-10">
-                <button id="prev-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-rewind-fill"></i>
-                </button>
-                <button id="play-btn" class="text-gray-600 text-[50px] w-[70px] h-[70px] rounded-full flex items-center justify-center hover:text-black">
-                    <i class="bi bi-play-fill ml-[5px]"></i>
-                    <i class="bi bi-pause-fill hidden"></i>
-                </button>
-                <button id="next-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-fast-forward-fill"></i></button>
-                <button id="list-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-view-list"></i></button>
+            <div class="w-full">
+                <input step="0.1" id="input-range" class="w-full accent cursor-pointer" type="range" value="0">
+                <div class="w-full time text-white">
+                    <p id="time">--:--</p>
+                    <p id="duration">--:--</p>
+                </div>
+            </div>
+            <div class="w-full mx-auto flex items-center justify-center gap-10">
+                <button id="list-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black"><i class="bi bi-view-list"></i></button>
+                <div class="flex items-center justify-center gap-10">
+                    <button id="prev-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-rewind-fill"></i></button>
+                    <button id="play-btn" class="text-gray-600 text-[50px] w-[70px] h-[70px] rounded-full flex items-center justify-center hover:text-black">
+                        <i class="bi bi-play-fill ml-[5px]"></i>
+                        <i class="bi bi-pause-fill hidden"></i>
+                    </button>
+                    <button id="next-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-fast-forward-fill"></i></button>
+                </div>
+                <button id="shuffle-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black"><i class="bi bi-shuffle"></i></button>
             </div>
         </div>
+    </div>
+    <div class="w-full">
+        <ul id="list" class="w-full flex items-center justify-center flex-col">
+
+        </ul>
     </div>
 </div>
 <script src="./app.js"></script>
