--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
                 </div>
             </div>
             <div class="w-full mx-auto flex items-center justify-center gap-10">
-                <button id="list-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black"><i class="bi bi-view-list"></i></button>
+                <button id="list-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black">
+                    <i class="bi bi-view-list"></i>
+                    <i id="close" class="bi bi-x hidden"></i>
+                </button>
                 <div class="flex items-center justify-center gap-10">
                     <button id="prev-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-rewind-fill"></i></button>
                     <button id="play-btn" class="text-gray-600 text-[50px] w-[70px] h-[70px] rounded-full flex items-center justify-center hover:text-black">
