--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,9 @@
             <div class="w-full mx-auto flex items-center justify-center gap-10">
                 <button id="list-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black">
                     <i class="bi bi-view-list"></i>
-                    <i id="close" class="bi bi-x hidden"></i>
+                </button>
+                <button id="close" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black hidden">
+                    <i class="bi bi-x"></i>
                 </button>
                 <div class="flex items-center justify-center gap-10">
                     <button id="prev-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-rewind-fill"></i></button>
@@ -42,9 +44,7 @@
         </div>
     </div>
     <div class="w-full">
-        <ul id="list" class="w-full flex items-center justify-center flex-col">
-
-        </ul>
+        <ul id="list" class="w-full flex items-center justify-center flex-col"></ul>
     </div>
 </div>
 <script src="./app.js"></script>
