--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,7 @@
             <div class="w-full mx-auto flex items-center justify-center gap-10">
                 <button id="list-btn" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black">
                     <i class="bi bi-view-list"></i>
-                </button>
-                <button id="close" class="text-gray-600 text-[35px] hover:scale-105 hover:text-black hidden">
-                    <i class="bi bi-x"></i>
+                    <i class="bi bi-x hidden"></i>
                 </button>
                 <div class="flex items-center justify-center gap-10">
                     <button id="prev-btn" class="text-gray-600 text-[40px] hover:scale-105 hover:text-black"><i class="bi bi-rewind-fill"></i></button>
