--- a/index.html
+++ b/index.html
@@ -3,13 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Title</title>
 </head>
 <body>
 
+<div class="container">
+    <header class="head">
+        <h1 class="logo"><img src="./image/weather-icon.jpg" alt="">Weather App</h1>
+        <form id="search-city-weather" class="header-search">
+            <input type="text" placeholder="Search any city" id="input">
+            <button type="submit"><i class="bi bi-search"></i></button>
+        </form>
+        <div class="theme">
+            <input id="theme" type="checkbox">
+            <label for="theme">
+                <i class="bi bi-sun-fill"></i>
+                <i class="bi bi-moon-fill"></i>
+            </label>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="hero-content">
+            <div class="content-left">
+                <img id="weather-status-img" src="" alt="">
+                <h2 id="weather-gradus"></h2>
+                <p id="location"></p>
+            </div>
+            <div class="content-right">
+                <p id="time" class="time"></p>
+                <p id="week-day" class="day"></p>
+            </div>
+        </div>
+    </section>
+</div>
 
-
-<script src="./app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
