--- a/index.html
+++ b/index.html
@@ -32,11 +32,55 @@
                 <p id="location"></p>
             </div>
             <div class="content-right">
+                <!--<p id="sunrise" class="time"></p>-->
+                <p id="sunset" class="time"></p>
                 <p id="time" class="time"></p>
-                <p id="week-day" class="day"></p>
             </div>
         </div>
     </section>
+    <div class="body">
+        <div class="box">
+            <div class="row line">
+                <div class="td">
+                    <i class="bi bi-droplet-half"></i>
+                    <div class="text">
+                        <p>Humidity</p>
+                        <p id="humidity"></p>
+                    </div>
+                </div>
+                <div class="td">
+                    <i class="bi bi-sunrise"></i>
+                    <div class="text">
+                        <p>Sunrise</p>
+                        <p id="sunrise2"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="td">
+                    <i class="bi bi-sun"></i>
+                    <div class="text">
+                        <p>UV index</p>
+                        <p id="sun"></p>
+                    </div>
+                </div>
+                <div class="td">
+                    <i class="bi bi-sunset"></i>
+                    <div class="text">
+                        <p>Sunset</p>
+                        <p id="sunset2"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box2">
+            <div class="weather-indicator">
+                <div id="air-pressure"></div>
+                <div class="compas" id=""></div>
+            </div>
+        </div>
+        <div></div>
+    </div>
 </div>
 
 <script src="js/app.js"></script>
