--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
     </div>
 </div>
 
+<div class="update-modal">
+    <div class="modal">
+        <div class="top-form">
+            <div class="close-modal">
+                &#10006;
+            </div>
+        </div>
+        <div class="update-form">
+            <h2>Update product</h2>
+            <form>
+                <input required id="title" class="form-control" type="text" placeholder="Enter title">
+                <input required id="price" class="form-control" type="text" placeholder="Price">
+                <input required id="discount" class="form-control" type="text" placeholder="Discount">
+                <button type="submit" class="submit-btn">Submit updating</button>
+            </form>
+        </div>
+    </div>
+</div>
+
 <script src="js/app.js"></script>
 </body>
 </html>
