--- a/index.html
+++ b/index.html
@@ -4,65 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Title</title>
 </head>
 <body>
 
 <div class="wrapper">
-    <div>
-        <button id="show-btn">Api Bitcoin</button>
-        <button id="show-table">Api Top Crypto </button>
-    </div>
+    <div id="card">
 
-    <div class="box">
-        <table id="table">
-            <tbody id="tbody">
-                <tr>
-                    <th>Rank</th>
-                    <th>Symbol</th>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Explorer</th>
-                </tr>
-
-            </tbody>
-        </table>
     </div>
 </div>
 
-<div class="show-chart-modal">
-    <div class="modal">
-        <div class="top">
-            <div class="close-modal">
-                &#10006;
-            </div>
-        </div>
-        <div class="body-modal">
-            <h2>Bitcoin full year price</h2>
-            <canvas id="myChart"></canvas>
-        </div>
-    </div>
-</div>
-
-<div class="show-chart">
-    <div class="modal">
-        <div class="top">
-            <div class="close">
-                &#10006;
-            </div>
-        </div>
-        <div class="body-modal">
-            <h2>Chart of coin</h2>
-            <canvas id="myCharts"></canvas>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="js/api-chart.js"></script>
-<script src="./js/api-table-chart.js"></script>
+<script src="./js/elements.js"></script>
+<script type="module" src="./js/app.js"></script>
 </body>
 </html>
